# pooi-all-in-one

.gitea/workflows/: build.yaml
.github/: dependabot.yml
demo/desk/: vite.renderer.config.mts
demo/desk/src/: App.vue
demo/desk/src/native/windows/: binding.gyp
demo/desk/src/router/: index.ts
demo/desk/src/services/: endpoint.ts  signalService.ts  webrtc.ts
demo/desk/src/stores/: devices.ts  settings.ts  signal.ts
demo/desk/src/types/: datachannel.ts  device.ts  index.ts
demo/desk/src/utils/: system.ts  winInput.ts
demo/desk/src/views/: about.vue  devices.vue  home.vue  remoteControl.vue  settings.vue
demo/desk/src/windows/: control.ts  index.ts  login.ts
demo/trie-rs/: Cargo.toml
demo/trie-rs/src/: lib.rs  main.rs  main_darts.rs
demo/tun-example/: Cargo.toml  build.rs  socks_debug.pcap
demo/tun-example/.cargo/: config.toml
demo/tun-example/src/: app.rs  config.rs  main.rs  protocol_handle.rs  proxy.rs  session.rs
demo/tun-example/src/app/: dispatcher.rs  dns.rs  router.rs  session.rs  stat_manager.rs
demo/tun-example/src/app/outbound/: manager.rs
demo/tun-example/src/config/: config.proto
demo/tun-example/src/proxy/: datagram.rs  inbound.rs
demo/tun-example/src/proxy/inbound/: socks.rs  socks5.rs
demo/tun-example/src/proxy/inbound/socks5/: socks.rs  udp_association.rs  udp_relay.rs
demo/tun-example/src/session/: socks_addr.rs
demo/tun-example/test/: udp_client copy.py  udp_client.py
docker-compose/env_test/keycloak/: docker-compose.yml
docker-compose/env_test/redis/: docker-compose.yml  redis.conf
docker-compose/infrastructure/: .env.example
docker-compose/infrastructure/gitea/: docker-compose.yaml
docker-compose/infrastructure/gitea/runner/: config.yaml
docker-compose/infrastructure/prometheus/prometheus_conf/: prometheus.yml
pooi-parent/basic/: pom.xml
pooi-parent/rpc/: pom.xml
pooi-parent/tenant-core/: pom.xml
pooi-parent/workflow/: Dockerfile  TODO.md  pom.xml
(+68 files in other folders)
