[package]
name = "tun-example"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc2 = "3.7"
env_logger = "0.11"
pnet_packet = "0.35"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "signal"] }
tun-rs = { version = "2", features = ["async"] }

[features]
default = ["async_tokio"]
async_tokio = []