[package]
name = "tun-example"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc2 = "3.7"
pnet_packet = "0.35"
socket2 = "0.6.1"
tokio = { version = "1.48", features = [ "rt-multi-thread", "macros", "signal", "sync", "time", ] }
tun-rs = { version = "2", features = ["async"] }

# Log
env_logger = "0.11"
log = "0.4.28"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Utility
async-recursion = "1.1.1"
async-trait = "0.1.89"
bytes = "1.11.0"
colored = "3.0.0"
futures = "0.3.31"
hickory-proto = "0.25.2"
lazy_static = "1.5.0"
lru = "0.16.2"
moka = { version = "0.12.11", features = ["future"] }
prost = "0.14"
rand = "0.9.2"
tokio-util = "0.7.17"
trait-variant = "0.1.2"
tokio-rustls = "0.26.4"

[build-dependencies]
prost-build = "0.14"

[features]
default = ["async_tokio"]
async_tokio = []
